--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<span>sdfsdfsdfsdfsdf</span>
+<head>
+	<link href='styles.css' rel='stylesheet'/>
+</head>
+<body>
+	<span>sdfsdfsdfsdfsdf</span>
+</body>
