--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <head>
-	<link href="styles.css" rel="stylesheet"/>
+	<style type='text/css'>
+	.span {
+	font-size: 14px;
+    font-weight: bold;
+	}
+	</style>
 </head>
 <body>
 	<span>sdfsdfsdfsdfsdf</span>
