--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <head>
-	<style type='text/css'>
-	.span {
-	font-size: 14px;
-    font-weight: bold;
-	}
-	</style>
+	<link href="styles.css" rel="stylesheet"/>
 </head>
 <body>
 	<span>sdfsdfsdfsdfsdf</span>
