--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
-<head>
-	<link href="styles.css" rel="stylesheet"/>
-</head>
-<body>
-	<span>sdfsdfsdfsdfsdf</span>
-</body>
+<html>
+	<head>
+		<title>PES 2018 3D KIT STUDIO</title>
+		<link href="css/styles.css" rel="stylesheet"/>
+		<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+		<script src="scripts/jquery.youtubebackground.js"></script>
+	</head>
+	<body>
+		<div class="main">
+			<div class="header">
+				<!-- <iframe width="840" height="321"
+						src="https://www.youtube.com/embed/MwHg4y0kjDI?rel=0&controls=0&showinfo=0&autoplay=1&loop=1&playlist=MwHg4y0kjDI"
+						frameborder="0" allowfullscreen>
+				</iframe> -->
+			</div>
+			
+			<div id="demo">
+				<img src="placeholder.jpg">
+			</div>
+			<script>
+				$('#demo').YTPlayer({videoId: 'MwHg4y0kjDI'});
+			</script>
+
+		</div>
+	</body>
+</html>
