--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 	<head>
 		<title>PES 2018 3D KIT STUDIO</title>
 		<link href="css/styles.css" rel="stylesheet"/>
-		<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
-		<script src="scripts/jquery.youtubebackground.js"></script>
+		<!-- <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+		<script src="scripts/jquery.youtubebackground.js"></script> -->
 	</head>
 	<body>
 		<div class="main">
 			<div class="header">
-				<!-- <iframe width="840" height="321"
+				<iframe width="840" height="480"
 						src="https://www.youtube.com/embed/MwHg4y0kjDI?rel=0&controls=0&showinfo=0&autoplay=1&loop=1&playlist=MwHg4y0kjDI"
 						frameborder="0" allowfullscreen>
-				</iframe> -->
+				</iframe>
 			</div>
 			
-			<div id="demo">
+			<!-- <div id="demo">
 				<img src="placeholder.jpg">
 			</div>
 			<script>
@@ -35,7 +35,7 @@
 								  autohide: 0
 								},
 					});
-			</script>
+			</script> -->
 
 		</div>
 	</body>
