--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 	<body>
 		<div class="main">
 			<div class="header">
-				<iframe width="840" height="480"
+				<!-- <iframe width="840" height="480"
 						src="https://www.youtube.com/embed/MwHg4y0kjDI?rel=0&controls=0&showinfo=0&autoplay=1&loop=1&playlist=MwHg4y0kjDI"
 						frameborder="0" allowfullscreen>
-				</iframe>
+				</iframe> -->
 			</div>
 			
-			<!-- <div id="demo">
+			<div id="demo">
 				<img src="placeholder.jpg">
 			</div>
 			<script>
@@ -35,7 +35,7 @@
 								  autohide: 0
 								},
 					});
-			</script> -->
+			</script>
 
 		</div>
 	</body>
