--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 	<head>
 		<title>PES 2018 3D KIT STUDIO</title>
 		<link href="css/styles.css" rel="stylesheet"/>
-		<!-- <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
-		<script src="scripts/jquery.youtubebackground.js"></script> -->
+		<script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
+		<script src="scripts/jquery.youtubebackground.js"></script>
 	</head>
 	<body>
 		<div class="main">
