--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					width: $(window).width(840px),
 					start: 0,
 					pauseOnScroll: false,
-					fitToBackground: true,
+					fitToBackground: false,
 					playerVars: { iv_load_policy: 3,
 								  modestbranding: 1,
 								  autoplay: 1,
