--- a/index.html
+++ b/index.html
@@ -21,20 +21,7 @@
 				$('#demo').YTPlayer({
 					videoId:'MwHg4y0kjDI',
 					repeat: true,
-					width: $(window).width(840),
-					start: 0,
-					pauseOnScroll: false,
-					fitToBackground: false,
-					playerVars: { iv_load_policy: 3,
-								  modestbranding: 1,
-								  autoplay: 1,
-								  controls: 0,
-								  showinfo: 0,
-								  wmode: 'opaque',
-								  branding: 0,
-								  autohide: 0
-								},
-					});
+					width: $(window).width(840)
 			</script>
 
 		</div>
