--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="main">
 			<div class="header">
-				<!-- <iframe width="840" height="480"
+				<!-- <iframe width="840" height="321"
 						src="https://www.youtube.com/embed/MwHg4y0kjDI?rel=0&controls=0&showinfo=0&autoplay=1&loop=1&playlist=MwHg4y0kjDI"
 						frameborder="0" allowfullscreen>
 				</iframe> -->
@@ -21,7 +21,8 @@
 				$('#demo').YTPlayer({
 					videoId:'MwHg4y0kjDI',
 					repeat: true,
-					width: $(window).width(840)
+					width: $(window).width(840),
+					});
 			</script>
 
 		</div>
