--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				$('#demo').YTPlayer({
 					videoId:'MwHg4y0kjDI',
 					repeat: true,
-					width: $(window).width(840),
+					width: $(window).width(840px)
 					});
 			</script>
 
